Chapter05/5.09-external-service-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  # The name of the Endpoints object must match the name of the service (see previous listing).
  name: external-service
subsets:
  - addresses:
    # The IPs of the endpoints that the service will forward connections to
    - ip: 11.11.11.11
    - ip: 22.22.22.22
    ports:
    # The target port of the endpoints
    - port: 80
