Chapter05/5.1-kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  ports:
  # The port this service will be available on
  - port: 80
    # The container port the service will forward to
    targetPort: 8080
  # All pods with the app=kubia label will be part of this service.
  selector:
    app: kubia
