Chapter05/5.5-kubia-svc-referring-to-pods-named-ports.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  ports:
  # Port 80 is mapped to the container’s port called http.
  - name: http
    port: 80
    targetPort: http
    # Port 443 is mapped to the container’s port, whose name is https.
  - name: https
    port: 443
    targetPort: https
  selector:
    app: kubia
