Chapter05/5.8-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  # The name of the service must match the name of the Endpoints object (see next listing).
  name: external-service
# This service has no selector defined.
spec:
  ports:
  - port: 80
