Chapter05/kubia-svc-client-ip-session-affinity.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  # This makes the service proxy redirect all requests originating from the same client IP to the same pod.
  sessionAffinity: ClientIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
