Chapter05/5.13-kubia-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
  # This Ingress maps the kubia.example.com domain name to your service.
  - host: kubia.example.com
    http:
      paths:
      # All requests will be sent to port 80 of the kubianodeport service.
      - path: /
        backend:
          serviceName: kubia-nodeport
          servicePort: 80
