Chapter05/5.16-kubia-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  # The whole TLS configuration is under this attribute.
  tls:
  # TLS connections will be accepted for the kubia.example.com hostname.
  - hosts: 
    - kubia.example.com
    # The private key and the certificate should be obtained from the tls-secret you created previously.
    secretName: tls-secret
  rules:
  - host: kubia.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubia-nodeport
          servicePort: 80
